--- a/index.html
+++ b/index.html
@@ -1,183 +1,76 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="./styles/main.css">
   </head>
   <body>
-    <div class="script">
-      <script src="./third-party/jquery.js"></script>
-      <script src="./third-party/noise.js"></script>
-      <script src="./third-party/two.js"></script>
+    <div class="scripts">
       <script src="./third-party/tween.js"></script>
-      <script src="./src/spark.js"></script>
-      <script src="./src/tomahawk.js"></script>
-      <script src="./src/hammer.js"></script>
-      <script src="./src/sublimation.js"></script>
-      <script src="./src/palette.js"></script>
+      <script src="./third-party/two.js"></script>
+      <script src="./src/spline.js"></script>
+      <script src="./src/path.js"></script>
       <script>
 
-        var timeline = new TWEEN();
-
         var two = new Two({
-          // type: Two.Types.canvas,
+          type: Two.Types.canvas,
           fullscreen: true,
           autostart: true
         }).appendTo(document.body);
 
-        noise.seed(Math.random());
+        var spline = new Two.Spline(two.width, two.height / 2);
+        spline.translation.set(two.width / 2, two.height);
 
-        var drag = 0.0625;
+        var circles = makeCircles(spline);
 
-        var sublimation = new Sublimation({
-            colorA: palette.toString('background'),
-            colorB: palette.toString('accent')
-          })
-          .setTimeline(timeline).addTo(two.scene);
+        var debug = two.makeGroup(spline);
+        var stage = two.makeGroup(circles);
 
-        sublimation.group.translation.set(two.width / 2, two.height / 2);
+        window.addEventListener('mousemove', function(e) {
 
-        var amount = 10;
-
-        var noiseStrength = 20;
-        var noiseScale = 300;
-        var step = 5;
-        var agent = new Two.Vector();
-
-        var tomahawks = _.map(_.range(1), function(i) {
-
-          var tomahawk = new Tomahawk(two);
-          tomahawk.translation.set(two.width / 2, two.height / 2);
-          tomahawk.ready(function() {
-            tomahawk.shape.fill = palette.toString('light');
-            tomahawk.shape.noStroke();
-            tomahawk.shape.join = 'round';
-            _.each(tomahawk.shape.children, function(child) {
-              child.scale = 1.01;
-            });
-          });
-
-          return tomahawk;
+          var amt = 2 * (e.clientX / two.width) - 1;
+          spline.turn(amt / 2);
 
         });
 
-        // var sparks = _.map(_.range(amount), function(i) {
+        two.bind('update', function() {
 
-        //   var startAngle = Math.random() * Math.PI * 2;
-        //   var endAngle = Math.random() * (Math.PI * 2 - startAngle) + startAngle;
-
-        //   var spark = new Spark({
-        //     amount: Math.floor(Math.random() * 30) + 1,
-        //     radius: Math.random() * 14 + 1,
-        //     linewidth: Math.random() * 5,
-        //     stroke: palette.toString('light')
-        //   }).addTo(two);
-        //   spark.translation.set(two.width / 2, two.height / 2);
-
-        //   spark.step = Math.random() * step;
-        //   spark.translation.set(Math.random() * two.width, Math.random() * two.height);
-        //   spark.scale = Math.random() * 2 + 1;
-        //   spark.opacity = 0;
-
-        //   return spark;
-
-        // });
-
-        // var sparkle = new Spark({
-        //   amount: 30,
-        //   radius: 12,
-        //   linewidth: 5,
-        //   stroke: palette.toString('solid')
-        // }).addTo(two);
-
-        // sparkle.translation.set(two.width / 2, two.height / 2);
-        // sparkle.scale = 12;
-        // sparkle.opacity = 0.33;
-
-        var hammers = _.map(_.range(amount), function(i) {
-
-          var hammer = new Hammer(33, 100, 200).setTimeline(timeline).addTo(two.scene);
-          hammer.shape.fill = palette.toString('solid');
-          hammer.shape.translation.set(two.width / 2, two.height / 2);
-          // hammer.shape.scale = Math.random() * 2 + 1;
-
-          return hammer;
+          for (var i = 0, l = circles.length; i < l; i++) {
+            var circle = circles[i];
+            var t = circle.t + circle.step;
+            circle.update(t);
+          }
 
         });
 
-        window.addEventListener('click', function(e) {
+        function makeCircles(spline) {
 
-          var mouse = { x: e.clientX, y: e.clientY };
+          var amt = 100;
 
-          _.each(tomahawks, function(tomahawk) {
-            tomahawk.explode(mouse, 200 * Math.random());
-          });
+          return _.map(_.range(amt), function(i) {
 
-          var hammer = hammers[Math.floor(Math.random() * hammers.length)];
+            var r = Math.floor(Math.random() * 100);
+            var s = Two.Path.makeCircle(r);
 
-          hammer.shape.translation.set(Math.random() * two.width, Math.random() * two.height);
-          hammer.start();
+            s.noStroke();
+            s.fill = 'rgb('
+              + Math.floor(Math.random() * 255) + ','
+              + Math.floor(Math.random() * 255) + ','
+              + Math.floor(Math.random() * 255) + ')';
 
-          sublimation.start();
+            s.spline = spline;
+            s.step = r * 0.000325;
 
-        });
+            s.t = Math.random();
 
-        two
-          .bind('resize', function() {
+            s.origin.set(
+              5 * (Math.random() * two.width - two.width / 2),
+              - Math.random() * two.height
+            );
 
-            var w = two.width / 2;
-            var h = two.height / 2;
-
-            // sparkle.translation.set(w, h);
-            sublimation.group.translation.set(w, h);
-
-          })
-          .bind('update', function(frameCount, timeDelta) {
-
-            if (!timeDelta) {
-              return;
-            }
-
-            timeline.update();
-
-            var i, l;
-
-            for (i = 0, l = tomahawks.length; i < l; i++) {
-              tomahawks[i].update();
-            }
-
-            // sparkle.update();
-
-            // for (i = 0, l = sparks.length; i < l; i++) {
-
-            //   var spark = sparks[i];
-
-            //   if (!spark.visible) {
-            //     continue;
-            //   }
-
-            //   var angle = noise.perlin2(spark.translation.x / noiseScale, spark.translation.y / noiseScale) * noiseStrength;
-            //   agent.set(spark.step * Math.cos(angle), spark.step * Math.sin(angle));
-            //   spark.translation.addSelf(agent);
-
-            //   var x = spark.translation.x;
-            //   var y = spark.translation.y;
-
-            //   if (x < - spark.radius || x > two.width + spark.radius ||
-            //     y < - spark.radius || y > two.height + spark.radius) {
-            //     spark.translation.set(
-            //       Math.random() * two.width,
-            //       Math.random() * two.height
-            //     );
-            //     // spark.visible = false;
-            //     spark.opacity = 0;
-            //   }
-
-            //   spark.update();
-            //   spark.opacity += (0.33 - spark.opacity) * 0.0625;
-
-            // }
+          return s;
 
           });
+
+        }
 
       </script>
     </div>
