rigging the scene

--- a/index.html
+++ b/index.html
@@ -2,18 +2,20 @@
 <html>
   <head>
     <title>~ Let's all go to Carolina ~</title>
+    <style>
+      * { margin: 0; padding: 0; }
+    </style>
   </head>
-  <body>
+  <body style="position: absolute; overflow: hidden; width: 100%; height: 100%; top: 0; left: 0;">
     <div class="scripts" style="display: none;">
 
       <script src="./third-party/tween.js"></script>
+      <script src="./third-party/three.js"></script>
       <script src="./third-party/two.js"></script>
       <script src="./third-party/sound.js"></script>
       <script src="./third-party/noise.js"></script>
 
-      <script src="./src/scene.js"></script>
-      <script src="./src/camera.js"></script>
-      <script src="./src/item.js"></script>
+      <script src="./src/path.js"></script>
       <script src="./src/carolina.js"></script>
       <script>
 
