--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
       <script src="./third-party/two.js"></script>
       <script src="./third-party/sound.js"></script>
       <script src="./third-party/noise.js"></script>
+      <script src="./third-party/xhr.js"></script>
 
+      <script src="./src/pool.js"></script>
       <script src="./src/path.js"></script>
+      <script src="./src/snare.js"></script>
       <script src="./src/carolina.js"></script>
       <script>
 
