--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
       <script src="./src/pool.js"></script>
       <script src="./src/path.js"></script>
+      <script src="./src/item.js"></script>
       <script src="./src/snare.js"></script>
       <script src="./src/carolina.js"></script>
       <script>
