--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <script src="./src/pool.js"></script>
       <script src="./src/path.js"></script>
       <script src="./src/item.js"></script>
-      <script src="./src/items/kicks.js"></script>
+      <script src="./src/items/prog.js"></script>
+      <script src="./src/items/kick.js"></script>
       <script src="./src/carolina.js"></script>
       <script>
 
