--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <script src="./src/item.js"></script>
       <script src="./src/items/prog.js"></script>
       <script src="./src/items/kick.js"></script>
+      <script src="./src/items/perc.js"></script>
       <script src="./src/carolina.js"></script>
       <script>
 
