updated audio to be directly from stems as well as fixed up tweening

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <script src="./src/items/prog.js"></script>
       <script src="./src/items/kick.js"></script>
       <script src="./src/items/perc.js"></script>
+      <script src="./src/items/timpani.js"></script>
       <script src="./src/carolina.js"></script>
       <script>
 
