--- a/analysis.html
+++ b/analysis.html
@@ -23,7 +23,7 @@
         Analyser.ready(function() {
 
           var path = './audio/stems/';
-          var filename = '+g Carolina - RC Mix 4 Perc Stem.wav';
+          var filename = '+e Carolina - RC Mix 4 Timpani Stem.wav';
 
           // var path = './audio/';
           // var filename = 'carolina.mp3';
