project plays multiple times

--- a/analysis.html
+++ b/analysis.html
@@ -24,7 +24,7 @@
         Analyser.ready(function() {
 
           var path = './audio/stems/';
-          var filename = '+u Carolina - RC Mix 4 Mellotron-Arp Stem.wav';
+          var filename = '+q Carolina - RC Mix 4 Whoah-oh Vocs Stem.wav';
 
           // var path = './audio/';
           // var filename = 'carolina.mp3';
