--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>~ Let's all go to Carolina ~</title>
-    <style>
-      * { margin: 0; padding: 0; }
-    </style>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <link type="text/css" rel="stylesheet" href="./styles/main.css">
   </head>
   <body style="position: absolute; overflow: hidden; width: 100%; height: 100%; top: 0; left: 0;">
     <div class="scripts" style="display: none;">
@@ -28,14 +29,30 @@
       <script src="./src/items/hook.js"></script>
       <script src="./src/items/guitar.js"></script>
       <script src="./src/items/mellotron.js"></script>
+      <script src="./src/items/vanguard.js"></script>
       <script src="./src/carolina.js"></script>
       <script>
 
         Carolina.init(function() {
 
-          Carolina.play({
-            elapsed: url.number('startTime', 0)
-          });
+          // Add a button here to start things off.
+          var startButton = document.createElement('button');
+          startButton.innerHTML = 'Play';
+          document.body.appendChild(startButton);
+
+          startButton.addEventListener('click', function() {
+
+            startButton.style.display = 'none';
+
+            Carolina.audio.bind('ended', function() {
+              startButton.style.display = 'block';
+            });
+
+            Carolina.reset({
+              elapsed: url.number('startTime', 0)
+            });
+
+          }, false);
 
         });
 
