--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
     <link type="text/css" rel="stylesheet" href="./styles/main.css">
   </head>
   <body style="position: absolute; overflow: hidden; width: 100%; height: 100%; top: 0; left: 0;">
+    <div id="content"></div>
+    <div class="loader">
+      <div class="gmb-loader">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
     <div class="scripts" style="display: none;">
 
+      <script src="./third-party/jquery.js"></script>
       <script src="./third-party/tween.js"></script>
       <script src="./third-party/three.js"></script>
       <script src="./third-party/two.js"></script>
@@ -35,24 +44,38 @@
 
         Carolina.init(function() {
 
-          // Add a button here to start things off.
-          var startButton = document.createElement('button');
-          startButton.innerHTML = 'Play';
-          document.body.appendChild(startButton);
+          $('.loader').fadeOut(function() {
 
-          startButton.addEventListener('click', function() {
+            // Add a button here to start things off.
+            var startButton = $('<button />')
+              .css({
+                display: 'none'
+              })
+              // .html('Play')
+              .appendTo(document.body);
 
-            startButton.style.display = 'none';
+            fadeIn();
 
             Carolina.audio.bind('ended', function() {
-              startButton.style.display = 'block';
+              fadeIn();
             });
 
-            Carolina.reset({
-              elapsed: url.number('startTime', 0)
+            startButton.bind('click', function() {
+
+              startButton.fadeOut();
+
+              Carolina.reset({
+                elapsed: url.number('startTime', 0)
+              });
+
             });
 
-          }, false);
+            function fadeIn() {
+              startButton.fadeIn();
+              
+            }
+
+          });
 
         });
 
